Style - Fix display on smaller phones like iPhone 4 and 5.

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -131,6 +131,6 @@ Mobile Layout
 	}
 
 	#places ul {
-		height: 31vh;
+		height: 28vh;
 	}	
 }
